Content divs were over lapping, I set the overflow to auto to correct it

--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,8 @@ a:active {
 	padding-top: 80px;
 	padding-bottom: 70px;
   border-bottom: 2px solid #dfe2e6;
+  overflow: auto;
+}
 
 .callout {
   font-size: 1.25em;
